# asseguro

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
docs/: BUILD.md  CONFIG.md  INSTALL.md  PROTOCOLO.md
include/: Asseguro.hpp  Config.hpp  CurlHTTPCliente.hpp  Evento.hpp  EventoManager.hpp  GPIO.hpp  HTTPCliente.hpp  Menu.hpp  MenuUART.hpp  Modbus.hpp  Porta.hpp  PortaManager.hpp  UARTInterface.hpp  UARTReal.hpp  Usuario.hpp  UsuarioManager.hpp
src/: Asseguro.cpp  Config.cpp  CurlHTTPCliente.cpp  Evento.cpp  EventoManager.cpp  GPIO.cpp  MenuUART.cpp  Modbus.cpp  Porta.cpp  PortaManager.cpp  UARTInterface.cpp  UARTReal.cpp  Usuario.cpp  UsuarioManager.cpp  main.cpp
